reorganized some stuff

--- a/experiments/validation/Main.ipynb
+++ b/experiments/validation/Main.ipynb
@@ -84,13 +84,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 268,
+   "execution_count": 273,
    "metadata": {},
    "outputs": [],
    "source": [
     "import json\n",
     "import subprocess\n",
-    "def migrate(schema):\n",
+    "def migrate_schema(schema):\n",
     "    try:\n",
     "        # Convertir le schéma JSON en chaîne JSON\n",
     "        schema_json_str = json.dumps(schema)\n",
@@ -109,12 +109,13 @@
     "    except Exception as e:\n",
     "        # print(str(e))\n",
     "        print(f\"Une erreur s'est produite : {e}\")\n",
-    "        return None"
+    "        return None\n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 269,
+   "execution_count": 271,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,17 +124,17 @@
     "    with open(schema_dir,'r',encoding='utf-8') as f : \n",
     "        schema= json.load(f)\n",
     "    print(schema)\n",
-    "    translated_schema=migrate(schema)\n",
+    "    translated_schema=migrate_schema(schema)\n",
     "    print(translated_schema)\n",
-    "    # demo_schema = JSONSchema(translated_schema)\n",
-    "    # # print(demo_schema)\n",
-    "    # with open (instance_dir,'r',encoding='utf-8') as f : \n",
-    "    #     instance=json.load(f)\n",
+    "    demo_schema = JSONSchema(translated_schema)\n",
+    "    # print(demo_schema)\n",
+    "    with open (instance_dir,'r',encoding='utf-8') as f : \n",
+    "        instance=json.load(f)\n",
     "        \n",
-    "    # result = demo_schema.evaluate(\n",
-    "    #     JSON(instance)\n",
-    "    # )\n",
-    "    # return result \n",
+    "    result = demo_schema.evaluate(\n",
+    "        JSON(instance)\n",
+    "    )\n",
+    "    return result \n",
     "def get_errors_validation(schema_dir:str,instance_dir:str): \n",
     "    result = validate_instance(schema_dir,instance_dir)\n",
     "    # print(result.output('detailed'))# if errors in result.output('detailed')\n",
@@ -146,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 270,
+   "execution_count": 274,
    "metadata": {},
    "outputs": [
     {
@@ -156,6 +157,16 @@
       "{'$schema': 'http://json-schema.org/draft-04/schema#', 'id': 'https://raw.githubusercontent.com/AlekseyBuzmakov/FCAPS/master/FCAPS/schemas/graph.json', 'title': 'Directed Graph JSON', 'description': 'Json file gives a description of a directed graph', 'type': 'array', 'items': [{'type': 'object', 'title': 'General Grap Info', 'description': 'An object contains general info about the graph', 'properties': {'NodesCount': {'title': 'Number of Nodes', 'description': 'The total number of nodes in the graph', 'type': 'integer', 'minimum': 0}, 'ArcsCount': {'title': 'Number of Arcs', 'description': 'The total number of arcs in the graph', 'type': 'integer', 'minimum': 0}}}, {'title': 'Nodes Info', 'description': 'All nodes are enumerated in this object', 'type': 'object', 'properties': {'Nodes': {'title': 'List of Nodes', 'description': 'The nodes of the graph are given within this array', 'type': 'array', 'items': {}}}, 'required': ['Nodes']}, {'title': 'Arcs Info', 'description': 'All arcs are enumerated in this object', 'type': 'object', 'properties': {'Arcs': {'title': 'List of Arcs', 'description': 'The arcs of the graph are given within this array', 'type': 'array', 'items': {'title': 'Graph Arc', 'description': 'A description of an arc of this graph', 'type': 'object', 'properties': {'S': {'title': 'Source Node', 'description': \"The source node of this arc given as an index in 'Nodes' array\", 'type': 'integer', 'minimum': 0}, 'D': {'title': 'Destination Node', 'description': \"The destination node of this arc given as an index in 'Nodes' array\", 'type': 'integer', 'minimum': 0}}, 'required': ['S', 'D']}}}, 'required': ['Arcs']}, {'title': 'Visualisation Info', 'description': 'All info that is related to graph visualisation is given here, such as vertices positions or level in concept lattices'}], 'minItems': 3}\n",
       "{'$schema': 'https://json-schema.org/draft/2019-09/schema', '$id': 'https://raw.githubusercontent.com/AlekseyBuzmakov/FCAPS/master/FCAPS/schemas/graph.json', 'title': 'Directed Graph JSON', 'description': 'Json file gives a description of a directed graph', 'type': 'array', 'prefixItems': [{'type': 'object', 'title': 'General Grap Info', 'description': 'An object contains general info about the graph', 'properties': {'NodesCount': {'title': 'Number of Nodes', 'description': 'The total number of nodes in the graph', 'type': 'integer', 'minimum': 0}, 'ArcsCount': {'title': 'Number of Arcs', 'description': 'The total number of arcs in the graph', 'type': 'integer', 'minimum': 0}}}, {'title': 'Nodes Info', 'description': 'All nodes are enumerated in this object', 'type': 'object', 'properties': {'Nodes': {'title': 'List of Nodes', 'description': 'The nodes of the graph are given within this array', 'type': 'array', 'items': {}}}, 'required': ['Nodes']}, {'title': 'Arcs Info', 'description': 'All arcs are enumerated in this object', 'type': 'object', 'properties': {'Arcs': {'title': 'List of Arcs', 'description': 'The arcs of the graph are given within this array', 'type': 'array', 'items': {'title': 'Graph Arc', 'description': 'A description of an arc of this graph', 'type': 'object', 'properties': {'S': {'title': 'Source Node', 'description': \"The source node of this arc given as an index in 'Nodes' array\", 'type': 'integer', 'minimum': 0}, 'D': {'title': 'Destination Node', 'description': \"The destination node of this arc given as an index in 'Nodes' array\", 'type': 'integer', 'minimum': 0}}, 'required': ['S', 'D']}}}, 'required': ['Arcs']}, {'title': 'Visualisation Info', 'description': 'All info that is related to graph visualisation is given here, such as vertices positions or level in concept lattices'}], 'minItems': 3}\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<jschon.jsonschema.Result at 0x1a6efbf8430>"
+      ]
+     },
+     "execution_count": 274,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
